--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-size: 16px;
     font-family: arial;
 }
 
@@ -27,10 +26,13 @@ a {
     color: white;
 }
 
-header .container {
+header .container, footer .container {
     justify-content: space-between;
     align-items: center;
     padding: 1rem 0;
+}
+
+header a {
     font-weight: bold;
 }
 
@@ -98,4 +100,14 @@ main .container {
     background-color: white;
     padding: 0.3rem 1rem;
     font-size: 2rem;
+}
+
+footer {
+    background-color: black;
+    color: white;
+    padding: 1rem 0;
+}
+
+.first-row {
+    padding-bottom: 10px;
 }
